new_changes_for_notebooks

--- a/examples/multimodal_clip/main.ipynb
+++ b/examples/multimodal_clip/main.ipynb
@@ -5,15 +5,63 @@
    "id": "c11fde21",
    "metadata": {},
    "source": [
-    "# Multimodal search using CLIP"
+    "# Multimodal search using CLIP\r\n",
+    "\r\n",
+    "![mmclip](https://www.researchgate.net/publication/363808556/figure/fig2/AS:11431281086053770@1664048343869/Architectures-of-the-designed-machine-learning-approaches-with-OpenAI-CLIP-model.jpg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "69fb1627",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting tantivy@ git+https://github.com/quickwit-oss/tantivy-py#164adc87e1a033117001cf70e38c82a53014d985\n",
+      "  Cloning https://github.com/quickwit-oss/tantivy-py to c:\\users\\kaush\\appdata\\local\\temp\\pip-install-ltmzhzqb\\tantivy_343fb804edcc44cbbdc4da3de36f142a\n",
+      "  Resolved https://github.com/quickwit-oss/tantivy-py to commit a47fcfb3a6ad3fa2fca76513bd52d840ff15c596\n",
+      "  Installing build dependencies: started\n",
+      "  Installing build dependencies: finished with status 'done'\n",
+      "  Getting requirements to build wheel: started\n",
+      "  Getting requirements to build wheel: finished with status 'done'\n",
+      "  Preparing metadata (pyproject.toml): started\n",
+      "  Preparing metadata (pyproject.toml): finished with status 'error'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  Running command git clone --filter=blob:none --quiet https://github.com/quickwit-oss/tantivy-py 'C:\\Users\\kaush\\AppData\\Local\\Temp\\pip-install-ltmzhzqb\\tantivy_343fb804edcc44cbbdc4da3de36f142a'\n",
+      "  error: subprocess-exited-with-error\n",
+      "  \n",
+      "  Preparing metadata (pyproject.toml) did not run successfully.\n",
+      "  exit code: 1\n",
+      "  \n",
+      "  [6 lines of output]\n",
+      "  \n",
+      "  Cargo, the Rust package manager, is not installed or is not on PATH.\n",
+      "  This package requires Rust and Cargo to compile extensions. Install it through\n",
+      "  the system's package manager or via https://rustup.rs/\n",
+      "  \n",
+      "  Checking for Rust toolchain....\n",
+      "  [end of output]\n",
+      "  \n",
+      "  note: This error originates from a subprocess, and is likely not a problem with pip.\n",
+      "error: metadata-generation-failed\n",
+      "\n",
+      "Encountered error while generating package metadata.\n",
+      "\n",
+      "See above for output.\n",
+      "\n",
+      "note: This is an issue with the package mentioned above, not pip.\n",
+      "hint: See above for details.\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install --quiet -U lancedb\n",
     "!pip install --quiet gradio transformers torch torchvision duckdb\n",
@@ -455,7 +503,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.6"
   },
   "vscode": {
    "interpreter": {
