--- a/examples/prompttools-eval-prompts/main.ipynb
+++ b/examples/prompttools-eval-prompts/main.ipynb
@@ -5,7 +5,10 @@
    "id": "0a13ddc8",
    "metadata": {},
    "source": [
-    "# LanceDB Experiment Example"
+    "# PromptTools : LLM Output Evaluation using LanceDB\n",
+    "![picture](https://media.licdn.com/dms/image/D5622AQG7LlHPaun5oQ/feedshare-shrink_2048_1536/0/1692934644617?e=1700092800&v=beta&t=PIHTwJKBDFGzgyTINYWq-saXgIkC37AvEkgMFf3SbK0)\n",
+    "\n",
+    "Find more on the <a href=\"https://hegel-ai.com/\">Prompttools</a> page."
    ]
   },
   {
@@ -19,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "885dabeb",
+   "id": "723d11f0-2426-42a1-a122-960840859e68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +42,7 @@
    "id": "f5650e31",
    "metadata": {},
    "source": [
-    "One common use case is to compare two different embedding functions and how it may impact your document retrieval. We have can define what embedding functions we'd like to test here.\n",
+    "One common use case is to compare **two different embedding functions** and how it may impact your document retrieval. We have can define what embedding functions we'd like to test here.\n",
     "\n",
     "Note: If you previously haven't downloaded these embedding models. This may kick off downloads."
    ]
@@ -186,6 +189,14 @@
     "paraphrase-MiniLM-L3-v2: [id2, id3, id1]\n",
     "\n",
     "default (all-MiniLM-L6-v2) : [id2, id1, id3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4908a9e3-3421-43f8-8a55-df9b272c7a7e",
+   "metadata": {},
+   "source": [
+    "## Let's visualize the outputs"
    ]
   },
   {
@@ -428,7 +439,8 @@
    "id": "bebb8023",
    "metadata": {},
    "source": [
-    "To evaluate the results, we'll define an evaluation function. Sometimes, you know order of the most relevant document should be given a query, and you can compute the correlation between expected ranking and actual ranking."
+    "To evaluate the results, we'll define an **evaluation function**. \n",
+    "Sometimes, you know order of the most relevant document should be given a query, and you can compute the correlation between expected ranking and actual ranking."
    ]
   },
   {
@@ -462,7 +474,7 @@
    "id": "974d6065",
    "metadata": {},
    "source": [
-    "Finally, we can evaluate and visualize the results."
+    "## Finally, we can evaluate and visualize the results."
    ]
   },
   {
@@ -744,7 +756,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
