--- a/examples/youtube_bot/main.ipynb
+++ b/examples/youtube_bot/main.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "source": [
     "# Youtube Transcript Search QA Bot\n",
+    "![picture](https://qph.cf2.quoracdn.net/main-qimg-5a926a036070e4e2ea33283dbe26c17c-pjlq) \n",
+    "\n",
     "This Q&A bot will allow you to search through youtube transcripts using natural language! By going through this notebook, we'll introduce how you can use LanceDB to store and manage your data easily.\n",
     "\n"
    ]
@@ -26,12 +28,12 @@
    "id": "3e41240e",
    "metadata": {},
    "source": [
-    "### Download the data\n",
-    "For this dataset we're using the HuggingFace dataset jamescalam/youtube-transcriptions.\n",
-    "\n",
-    "From the <a href=\"https://huggingface.co/datasets/jamescalam/youtube-transcriptions\">website</a>\n",
-    "\n",
-    "We'll use the training split with 700 videos and 208619 sentences\n"
+    "## Download the data\r\n",
+    "For this application we are going to use the HuggingFace dataset -jamescalam/youtube-transcriptions.\r\n",
+    "\r\n",
+    "For more information, you can find the dataset <a href=\"https://huggingface.co/datasets/jamescalam/youtube-transcriptions\">here</a>.\r\n",
+    "\r\n",
+    "We'll use the training a split with 700 videos and 208619 sentences.\r\n"
    ]
   },
   {
@@ -168,8 +170,9 @@
    "id": "4fe3d190",
    "metadata": {},
    "source": [
-    "### Create embedding function\n",
-    "To create embeddings out of the text, we'll call the OpenAI embeddings API to get embeddings. Make sure you have an API key setup and that your account has available credits."
+    "### Create embedding function\r\n",
+    "To create embeddings out of the text corpus, we'll call the OpenAI embeddings API to get embeddings.\r\n",
+    "Open a free account here and get credits."
    ]
   },
   {
@@ -323,8 +326,9 @@
    "id": "5018aeed",
    "metadata": {},
    "source": [
-    "Now we're ready to save the data and create a new LanceDB table\n",
-    "\n"
+    "## Connect to the LanceDB\r\n",
+    "\r\n",
+    "For more information on the lancedb interface, head over to the <a href=\"https://lancedb.github.io/lancedb/python/python/#lancedb.db.DBConnection.create_table\">docs</a>\n"
    ]
   },
   {
@@ -665,7 +669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
