--- a/examples/Code-Documentation-QA-Bot/main.ipynb
+++ b/examples/Code-Documentation-QA-Bot/main.ipynb
@@ -5,10 +5,11 @@
    "id": "13cb272e",
    "metadata": {},
    "source": [
-    "# Code documentation Q&A bot example with LangChain\n",
-    "\n",
-    "This Q&A bot will allow you to query your own documentation easily using questions. We'll also demonstrate the use of LangChain and LanceDB using the OpenAI API. \n",
-    "\n",
+    "# Code documentation Q&A bot example with LangChain\r",
+    "![picture](https://lancedb.github.io/lancedb/assets/ecosystem-illustration.png)\r\n",
+    "\r\n",
+    "This Q&A bot will allow you to query your own documentation easily using questions. We'll also demonstrate the use of LangChain and LanceDB using the OpenAI API.\r\n",
+    "\r\n",
     "In this example we'll use Pandas 2.0 documentation, but, this could be replaced for your own docs as well"
    ]
   },
@@ -79,8 +80,8 @@
    "id": "34f524d3",
    "metadata": {},
    "source": [
-    "# Loading in our code documentation, generating embeddings and storing our documents in LanceDB\n",
-    "\n",
+    "# Loading in our code documentation, generating embeddings and storing our documents in LanceDB\r\n",
+    "\r\n",
     "We're going to use the power of LangChain to help us create our Q&A bot. It comes with several APIs that can make our development much easier as well as a LanceDB integration for vectorstore."
    ]
   },
@@ -144,7 +145,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_document_title(document):\n",
+    "# Pre-processing and loading the documentation\n",
+    "\n",
+    "Next, let's pre-process and load the documentation. To make sure we don't need to do this repeatedly if we were updating code, we're caching it using pickle so we can retrieve it again (this could take a few minutes to run the first time you do it). We'll also add some more metadata to the docs here such as the title and version of the code:def get_document_title(document):\n",
     "    m = str(document.metadata[\"source\"])\n",
     "    title = re.findall(\"pandas.documentation(.*).html\", m)\n",
     "    if title[0] is not None:\n",
@@ -378,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.6"
   },
   "vscode": {
    "interpreter": {
