--- a/examples/reducing_hallucinations_ai_agents/main.ipynb
+++ b/examples/reducing_hallucinations_ai_agents/main.ipynb
@@ -10,13 +10,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now let's install some required python libraries, as we'll be using LangChain, SerpApi for Google Search, and LanceDB. We'll also need dotenv to retrieve our environment variables."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -104,11 +97,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we'll create a LangChain tool that allows our agent to insert critiques, which uses a pydantic schema to guide the agent on what kind of results to insert. \n",
-    "\n",
-    "In LanceDB the primary abstraction you'll use to work with your data is a **Table**. A Table is designed to store large numbers of columns and huge quantities of data! For those interested, a LanceDB is columnar-based, and uses Lance, an open data format to store data.\n",
-    "\n",
+    "Now, we'll create a `LangChain` tool that allows our agent to insert critiques, which uses a `pydantic` schema to guide the agent on what kind of results to insert.\r\n",
+    "\r\n",
+    "In LanceDB the primary abstraction you'll use to work with your data is a **Table**.  \r\n",
+    "A Table is designed to store large numbers of columns and huge quantities of data! For those interested, a LanceDB is columnar-based, and uses Lance, an open data format to store data.\r\n",
+    "\r\n",
     "This tool will create a Table if it does not exist and store the relevant information (the embedding, actions, and critiques)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Considering the image below \n",
+    "1. ideation step gets a predefined number of output proposals (ideas) from the LLM.\n",
+    "\n",
+    "2. critiques all of the ideas looking for possible flaws in the proposals and picking the most appropriate suggestion.\n",
+    "\n",
+    "3. resolve, the LLM tries to improve the best idea from the [2] critique step. The output here constitutes the final answer.\n",
+    "\n",
+    "![image](https://miro.medium.com/v2/resize:fit:1400/1*dMfLxIR-s8osxkVUbORtGg.png)"
    ]
   },
   {
@@ -318,7 +326,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -332,10 +340,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
-  },
-  "orig_nbformat": 4
+   "version": "3.11.6"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
