--- a/examples/movie-recommender/main.ipynb
+++ b/examples/movie-recommender/main.ipynb
@@ -39,7 +39,11 @@
     "import lancedb\n",
     "\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import re\n",
+    "import requests\n",
+    "import zipfile\n",
+    "from pathlib import Path"
    ]
   },
   {
@@ -51,7 +55,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from io import BytesIO\n",
+    "import zipfile\n",
+    "\n",
+    "# Get the zip file content\n",
+    "r = requests.get(\"https://files.grouplens.org/datasets/movielens/ml-latest-small.zip\")\n",
+    "zip_file_content = BytesIO(r.content)\n",
+    "\n",
+    "# Save the content to a file\n",
+    "with open('ml-latest-small.zip', 'wb') as f:\n",
+    "    f.write(zip_file_content.getbuffer())\n",
+    "\n",
+    "# Create a ZipFile object with the saved file\n",
+    "with zipfile.ZipFile('ml-latest-small.zip', 'r') as z:\n",
+    "    z.extractall()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +196,7 @@
        "[100836 rows x 3 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +607,7 @@
        "[610 rows x 9724 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +649,7 @@
        "        -9.3789837e-05, -9.3789837e-05, -1.9718462e-03]], dtype=float32)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -995,7 +1022,7 @@
        "[9724 rows x 610 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1172,7 @@
        "[9724 rows x 3 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1158,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1341,7 @@
        "[9724 rows x 4 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1336,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1364,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1383,15 +1410,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kaush\\AppData\\Local\\Temp\\ipykernel_6648\\3614977059.py:3: DeprecatedWarning: to_df is deprecated as of 0.3.1 and will be removed in 0.4.0. Use the bar function instead\n",
+      "  result = table.search(pd_data[pd_data['title'] == title][\"vector\"].values[0]).limit(5).to_df()\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -1402,7 +1432,7 @@
        " ['Bad Moms (2016)', 'https://www.imdb.com/title/tt4651520']]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1413,9 +1443,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kaush\\AppData\\Local\\Temp\\ipykernel_6648\\3614977059.py:3: DeprecatedWarning: to_df is deprecated as of 0.3.1 and will be removed in 0.4.0. Use the bar function instead\n",
+      "  result = table.search(pd_data[pd_data['title'] == title][\"vector\"].values[0]).limit(5).to_df()\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -1427,7 +1465,7 @@
        " ['Man of Steel (2013)', 'https://www.imdb.com/title/tt0770828']]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
