--- a/examples/Code-Documentation-QA-Bot/main.ipynb
+++ b/examples/Code-Documentation-QA-Bot/main.ipynb
@@ -15,12 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "66638d6c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -qq openai langchain tiktoken\n",
+    "!pip install -qq openai langchain tiktoken unstructured\n",
     "!pip install -qq lancedb"
    ]
   },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "58ee1868",
    "metadata": {},
    "outputs": [],
@@ -43,36 +43,13 @@
     "import os\n",
     "\n",
     "# Configuring the environment variable OPENAI_API_KEY\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"sk-..\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
     "\n",
     "if \"OPENAI_API_KEY\" not in os.environ:\n",
     "    os.environ[\"OPENAI_API_KEY\"] = \"sk-...\"\n",
     "openai.api_key = os.environ[\"OPENAI_API_KEY\"]\n",
     "    \n",
     "assert len(openai.Model.list()[\"data\"]) > 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "2a1c54bd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LanceTable(sup)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import lancedb\n",
-    "db = lancedb.connect(\"data/sample-lancedb\")\n",
-    "db.open_table(\"sup\")"
    ]
   },
   {
@@ -87,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b55d22f1",
    "metadata": {},
    "outputs": [],
@@ -117,17 +94,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "7da77e75",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pandas_docs = requests.get(\"https://eto-public.s3.us-west-2.amazonaws.com/datasets/pandas_docs/pandas.documentation.zip\")\n",
-    "with open('/tmp/pandas.documentation.zip', 'wb') as f:\n",
-    "    f.write(pandas_docs.content)\n",
+    "#pandas_docs = requests.get(\"https://eto-public.s3.us-west-2.amazonaws.com/datasets/pandas_docs/pandas.documentation.zip\")\n",
     "\n",
-    "file = zipfile.ZipFile(\"/tmp/pandas.documentation.zip\")\n",
-    "file.extractall(path=\"/tmp/pandas_docs\")"
+    "numpy_docs = requests.get(\"https://numpy.org/doc/1.26/numpy-html.zip\")\n",
+    "with open('numpy-html.zip', 'wb') as f:\n",
+    "    f.write(numpy_docs.content)\n",
+    "\n",
+    "file = zipfile.ZipFile(\"numpy-html.zip\")\n",
+    "file = file.extractall(path=\"numpy_docs\")"
    ]
   },
   {
@@ -140,24 +119,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d171d062",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Pre-processing and loading the documentation\n",
     "\n",
-    "Next, let's pre-process and load the documentation. To make sure we don't need to do this repeatedly if we were updating code, we're caching it using pickle so we can retrieve it again (this could take a few minutes to run the first time you do it). We'll also add some more metadata to the docs here such as the title and version of the code:def get_document_title(document):\n",
-    "    m = str(document.metadata[\"source\"])\n",
-    "    title = re.findall(\"pandas.documentation(.*).html\", m)\n",
-    "    if title[0] is not None:\n",
-    "        return(title[0])\n",
-    "    return ''"
+    "#Next, let's pre-process and load the documentation. To make sure we don't need to do this repeatedly if we were updating code,\n",
+    "#we're caching it using pickle so we can retrieve it again (this could take a few minutes to run the first time you do it).\n",
+    "#We'll also add some more metadata to the docs here such as the title and version of the code:\n",
+    "import re\n",
+    "\n",
+    "def get_document_title(document_list):\n",
+    "    titles = []\n",
+    "    for doc in document_list:\n",
+    "        if 'metadata' in doc and 'source' in doc['metadata']:\n",
+    "            m = str(doc['metadata']['source'])\n",
+    "            title = re.findall(\"numpy_docs(.*).html\", m)\n",
+    "            print(title)\n",
+    "            if title:\n",
+    "                titles.append(title[0])\n",
+    "            else:\n",
+    "                titles.append('')\n",
+    "        else:\n",
+    "            titles.append('')\n",
+    "    return titles\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "130162ad",
+   "id": "2abacdc6-6f40-4d96-99bb-0e4ef18ffdfa",
    "metadata": {},
    "source": [
     "# Pre-processing and loading the documentation\n",
@@ -167,38 +159,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "33bfe7d8",
+   "execution_count": null,
+   "id": "f5f683a7-123b-4e9e-a60b-115bc1340a66",
    "metadata": {},
    "outputs": [],
    "source": [
-    "docs_path = Path(\"docs.pkl\")\n",
     "docs = []\n",
-    "\n",
-    "if not docs_path.exists():\n",
-    "    for p in Path(\"/tmp/pandas_docs/pandas.documentation\").rglob(\"*.html\"):\n",
-    "        print(p)\n",
-    "        if p.is_dir():\n",
-    "            continue\n",
-    "        try:\n",
-    "            loader = UnstructuredHTMLLoader(p)\n",
-    "            raw_document = loader.load()\n",
-    "        except Exception as e:\n",
-    "            print(f\"Error loading document: {e}\")\n",
-    "            continue\n",
-    "        \n",
-    "        m = {}\n",
-    "        m[\"title\"] = get_document_title(raw_document[0])\n",
-    "        m[\"version\"] = \"2.0rc0\"\n",
+    "docs_path = Path(\"docs.pkl\")\n",
+    "for p in Path(\"numpy_docs\").rglob(\"*.html\"):\n",
+    "    if p.is_dir():\n",
+    "        continue\n",
+    "    loader = UnstructuredHTMLLoader(p)\n",
+    "    raw_document = loader.load()\n",
+    "    #docs.append(raw_document)\n",
+    "    title = get_document_title(raw_document)\n",
+    "    m = {\n",
+    "        \"title\": title\n",
+    "    }\n",
+    "    if raw_document:\n",
     "        raw_document[0].metadata = raw_document[0].metadata | m\n",
     "        raw_document[0].metadata[\"source\"] = str(raw_document[0].metadata[\"source\"])\n",
-    "        docs = docs + raw_document\n",
-    "\n",
-    "    with docs_path.open(\"wb\") as fh:\n",
+    "        docs.extend(raw_document)\n",
+    "        \n",
+    "if docs:\n",
+    "    with open(docs_path, \"wb\") as fh:\n",
     "        pickle.dump(docs, fh)\n",
     "else:\n",
-    "    with docs_path.open(\"rb\") as fh:\n",
-    "        docs = pickle.load(fh)\n"
+    "    with open(docs_path, \"rb\") as fh:\n",
+    "        docs = pickle.load(fh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c019d728-bb65-494a-b4a9-73a62bf8e155",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(docs)"
    ]
   },
   {
@@ -213,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "82230563",
    "metadata": {},
    "outputs": [],
@@ -224,6 +222,16 @@
     ")\n",
     "documents = text_splitter.split_documents(docs)\n",
     "embeddings = OpenAIEmbeddings()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9787954b-0c2c-4771-a95f-e37727a4827e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "documents"
    ]
   },
   {
@@ -238,13 +246,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "74780a58",
    "metadata": {},
    "outputs": [],
    "source": [
     "db = lancedb.connect('lancedb')\n",
-    "table = db.create_table(\"pandas_docs\", data=[\n",
+    "table = db.create_table(\"numpy_docs\", data=[\n",
     "    {\"vector\": embeddings.embed_query(\"Hello World\"), \"text\": \"Hello World\", \"id\": \"1\"}\n",
     "], mode=\"overwrite\")\n",
     "docsearch = LanceDB.from_documents(documents, embeddings, connection=table)"
@@ -260,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "6a5891ad",
    "metadata": {},
    "outputs": [],
@@ -278,21 +286,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "70d88316",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "' The major differences in pandas 2.0 include the ability to install optional dependencies with pip extras, the ability to use any numpy numeric dtype in an Index, and enhancements, notable bug fixes, backwards incompatible API changes, deprecations, removal of prior version deprecations/changes, and performance improvements.'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "query = \"What are the major differences in pandas 2.0?\"\n",
     "qa.run(query)"
@@ -300,21 +297,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "85a0397c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "' 2.0.0rc0'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "query = \"What's the current version of pandas?\"\n",
     "qa.run(query)"
@@ -322,21 +308,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "923f86c6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "' You can install optional dependencies with pip install \"pandas[performance]\" and specific sets of dependencies are listed in the sections below. You can also import optional dependencies with pandas.compat._optional.import_optional_dependency and make sure to include a test asserting that an ImportError is raised when the optional dependency is not found. Additionally, make sure to document any optional dependencies in Optional Dependencies and set the minimum required version in the pandas.compat._optional.VERSIONS dict for backwards compatibility.'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "query = \"How do I make use of installing optional dependencies?\"\n",
     "qa.run(query)"
@@ -344,21 +319,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "02082f83",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "' Possible incompatibility for HDF5 formats created with pandas < 0.13.0, Map on Index types now return other Index types, Accessing datetime fields of Index now return Index, pd.unique will now be consistent with extension types, S3 file handling, Partial string indexing changes, Concat of different float dtypes will not automatically upcast, pandas Google BigQuery support has moved, Memory usage for Index is more accurate, DataFrame.sort_index changes, GroupBy describe formatting, Window binary corr/cov operations return a MultiIndex DataFrame, HDFStore where string comparison, Dependencies have increased minimum versions, Sum/prod of all-NaN or empty Series/DataFrames is now consistently NaN, Indexing with a list with missing labels is deprecated, NA naming changes, Iteration of Series/Index will now return Python scalars, Indexing with a Boolean Index, PeriodIndex resampling, Improved error handling during item assignment in pd.eval, Dtype conversions, MultiIndex constructor with a single level, UTC localization with Series, Consistency of range functions, No automatic Matplotlib converters, Instantiation from dicts preserves dict insertion order for Python 3.6+,'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "query = \"What are the backwards incompatible API changes in Pandas 2.0?\"\n",
     "qa.run(query)"
