--- a/examples/Code-Documentation-QA-Bot/main.ipynb
+++ b/examples/Code-Documentation-QA-Bot/main.ipynb
@@ -43,7 +43,7 @@
     "import os\n",
     "\n",
     "# Configuring the environment variable OPENAI_API_KEY\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"sk-"\n",
     "\n",
     "if \"OPENAI_API_KEY\" not in os.environ:\n",
     "    os.environ[\"OPENAI_API_KEY\"] = \"sk-...\"\n",
