--- a/examples/Code-Documentation-QA-Bot/main.ipynb
+++ b/examples/Code-Documentation-QA-Bot/main.ipynb
@@ -10,7 +10,7 @@
     "\r\n",
     "This Q&A bot will allow you to query your own documentation easily using questions. We'll also demonstrate the use of LangChain and LanceDB using the OpenAI API.\r\n",
     "\r\n",
-    "In this example we'll use Pandas 2.0 documentation, but, this could be replaced for your own docs as well"
+    "In this example we'll **Numpy 1.26** 2.0 documentation, but, this could be replaced for your own docs as well"
    ]
   },
   {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "58ee1868",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
     "import os\n",
     "\n",
     "# Configuring the environment variable OPENAI_API_KEY\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"sk-...\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"sk-\"\n",
     "\n",
     "if \"OPENAI_API_KEY\" not in os.environ:\n",
     "    os.environ[\"OPENAI_API_KEY\"] = \"sk-...\"\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b55d22f1",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7da77e75",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d171d062",
    "metadata": {},
    "outputs": [],
@@ -158,8 +158,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5609932d-21fd-4b39-a3e9-12b709358751",
+   "metadata": {},
+   "source": [
+    "If there is some issue with nltk package, kindly try using\n",
+    "```\n",
+    "import nltk\n",
+    "nltk.download('punkt')\n",
+    "```\n",
+    "or try to manually install the [nltk_data](https://github.com/nltk/nltk_data/tree/gh-pages) package and unzip the **punkt tokenizer** zip and the **averaged_perceptron_tagger** zip file in the packages folder."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "f5f683a7-123b-4e9e-a60b-115bc1340a66",
    "metadata": {},
    "outputs": [],
@@ -177,9 +190,10 @@
     "        \"title\": title\n",
     "    }\n",
     "    if raw_document:\n",
-    "        raw_document[0].metadata = raw_document[0].metadata | m\n",
+    "        raw_document[0].metadata.update(m)\n",
     "        raw_document[0].metadata[\"source\"] = str(raw_document[0].metadata[\"source\"])\n",
     "        docs.extend(raw_document)\n",
+    "\n",
     "        \n",
     "if docs:\n",
     "    with open(docs_path, \"wb\") as fh:\n",
@@ -191,10 +205,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "c019d728-bb65-494a-b4a9-73a62bf8e155",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2699"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(docs)"
    ]
@@ -211,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "82230563",
    "metadata": {},
    "outputs": [],
@@ -222,16 +247,6 @@
     ")\n",
     "documents = text_splitter.split_documents(docs)\n",
     "embeddings = OpenAIEmbeddings()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9787954b-0c2c-4771-a95f-e37727a4827e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "documents"
    ]
   },
   {
@@ -246,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "74780a58",
    "metadata": {},
    "outputs": [],
@@ -268,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "6a5891ad",
    "metadata": {},
    "outputs": [],
@@ -286,46 +301,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "70d88316",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' NumPy is the fundamental package for scientific computing in Python. It provides a multidimensional array object, various derived objects (such as masked arrays and matrices), and an assortment of routines for fast operations on arrays, including mathematical, logical, shape manipulation, sorting, selecting, I/O, discrete Fourier transforms, basic linear algebra, basic statistical operations, random simulation and much more.'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "query = \"What are the major differences in pandas 2.0?\"\n",
+    "query = \"tell me about the numpy library?\"\n",
     "qa.run(query)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "85a0397c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' The current version of numpy is 1.26.'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "query = \"What's the current version of pandas?\"\n",
+    "query = \"What's the current version of numpy?\"\n",
     "qa.run(query)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "923f86c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' numpy has linear algebra operations such as matrix_power(), matrix_rank(), multi_dot(), norm(), pinv(), qr(), slogdet(), solve(), svd(), tensorinv(), tensorsolve().'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "query = \"How do I make use of installing optional dependencies?\"\n",
+    "query = \"What kind of linear algebra related operations can be done in numpy?\"\n",
     "qa.run(query)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "02082f83",
+   "cell_type": "markdown",
+   "id": "f8958d1b-0ad6-44d6-bca0-d81771c564a1",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "query = \"What are the backwards incompatible API changes in Pandas 2.0?\"\n",
-    "qa.run(query)"
+    "Thanks"
    ]
   }
  ],
@@ -345,7 +390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.8.10"
   },
   "vscode": {
    "interpreter": {
