fxing_instruct_colab

--- a/examples/instruct-multitask/main.ipynb
+++ b/examples/instruct-multitask/main.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "63f36f93-cf85-4548-a66c-5e4c8b8f9401",
    "metadata": {},
    "outputs": [],
@@ -147,10 +147,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "id": "9aaa6835-fa7c-4197-b86b-e25efd7a7eb3",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Lenovo\\Documents\\instruct\\lenv\\Lib\\site-packages\\InstructorEmbedding\\instructor.py:7: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
+      "  from tqdm.autonotebook import trange\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -158,20 +166,6 @@
       "load INSTRUCTOR_Transformer\n",
       "max_seq_length  512\n"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "68b6e00cd37045a0969946ba1b6f7148",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Batches:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -199,10 +193,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a4959ee0-2e84-470d-aa95-cec459e2bb1b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2ae3887b9f014646b1e0d4619fcea217",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Batches:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "data_f1= [\n",
     "    {\"text\": \"Aspirin is a widely-used over-the-counter medication known for its anti-inflammatory and analgesic properties. It is commonly used to relieve pain, reduce fever, and alleviate minor aches and pains.\"},\n",
@@ -240,14 +249,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "6111c40b-588f-401d-af8a-1c729e51d0b8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "093d7315347a4c098b19e8f5aecfbce2",
+       "model_id": "552ad38ba9a149bf8082944ad831091d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -267,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "72fedb02-c63a-4d25-86bc-1c3c4f7ca8e9",
    "metadata": {},
    "outputs": [
@@ -298,20 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "30a25b16-ddb4-4e29-93c1-5ee5aebd2217",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import lancedb\n",
-    "from lancedb.pydantic import LanceModel, Vector\n",
-    "from lancedb.embeddings import get_registry\n",
-    "from lancedb.embeddings import InstructorEmbeddingFunction"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "id": "54481449-cc7b-4b62-ae40-9bd5e91eb0af",
    "metadata": {},
    "outputs": [
@@ -322,20 +318,6 @@
       "load INSTRUCTOR_Transformer\n",
       "max_seq_length  512\n"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4deac54b530e45e383bee478fefff158",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Batches:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -354,10 +336,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e1c5fdab-5a0b-47ce-826e-2fb899570431",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "19421fc5c5e641dd821268d7af6369f4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Batches:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "data_f2 = [\n",
     "    {\"text\": \"Aspirin is a widely-used over-the-counter medication known for its anti-inflammatory and analgesic properties. It is commonly used to relieve pain, reduce fever, and alleviate minor aches and pains.\"},\n",
@@ -387,14 +384,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "id": "b6bcee5e-192f-4eeb-9ad0-c4c6e60f936d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b6d8cd1f29444ea687d69b027535075b",
+       "model_id": "2b6e510344d543b38fddf4c6f424e38d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -414,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "id": "895ddc86-ecec-4403-acc8-0b51cb04178c",
    "metadata": {},
    "outputs": [
@@ -440,7 +437,7 @@
    "id": "5ac26b83-a13f-4fc7-baaf-ff6817baab3d",
    "metadata": {},
    "source": [
-    "### We can see that the *_distance* value for different instructions are different, this clearly indicates that the instructions have some effect on the embedding"
+    "### We can see that the **_distance** value for different instructions are different, this clearly indicates that the instructions have some effect on the embedding"
    ]
   },
   {
@@ -452,29 +449,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0fc20b52-b0e6-4616-b32b-b85b6ea42321",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import lancedb\n",
-    "from lancedb.pydantic import LanceModel, Vector\n",
-    "from lancedb.embeddings import get_registry\n",
-    "from lancedb.embeddings import InstructorEmbeddingFunction"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "a08ec791-bd1f-47d9-96f7-70bdbaf24769",
    "metadata": {},
    "source": [
-    "## Calling embedding model with different instruction pair"
+    "### Calling embedding model with different instruction pair"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "id": "14a33b32-1adb-4b94-a460-3d6ba1f566af",
    "metadata": {},
    "outputs": [
@@ -503,10 +487,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "id": "72ff5950-1c17-4890-9faf-ea15d2ccb585",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "618509aef04548c3bca6bdf6c64106ae",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Batches:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "data_qa = [ { \"text\": \"A canvas painting is artwork created on a canvas surface using various painting techniques and mediums like oil, acrylic, or watercolor. It is popular in traditional and contemporary art, displayed in galleries, museums, and homes.\"},\n",
     "    { \"text\": \"A cinema, also known as a movie theater or movie house, is a venue where films are shown to an audience for entertainment. It typically consists of a large screen, seating arrangements, and audio-visual equipment to project and play movies.\"},\n",
@@ -519,14 +518,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "id": "e330fd10-c7a2-4fa5-99f9-ca616858f206",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "486b2bf6c464479a9e1615257729f51b",
+       "model_id": "768b2591b8e74e49a559d35b41585970",
        "version_major": 2,
        "version_minor": 0
       },
@@ -545,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "id": "cbc5340a-41a6-4958-a037-e60f249f7012",
    "metadata": {},
    "outputs": [
