--- a/examples/instruct-multitask/main.ipynb
+++ b/examples/instruct-multitask/main.ipynb
@@ -5,7 +5,8 @@
    "id": "58b30d1f-28e7-4e27-b256-f7c7bbcfbf4b",
    "metadata": {},
    "source": [
-    "## InstructOR - A multitask custom embedding model for task based applications, made easier with LanceDB"
+    "## InstructOR - A multitask custom embedding model for task based applications, made easier with LanceDB\n",
+    "![instruct](embeddings11.png)"
    ]
   },
   {
