--- a/tutorials/better-rag-FLAIR/main.ipynb
+++ b/tutorials/better-rag-FLAIR/main.ipynb
@@ -467,7 +467,7 @@
         "from langchain.llms import OpenAI\n",
         "import getpass\n",
         "\n",
-        "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
+        "os.environ[\"OPENAI_API_KEY\"] = \"sk-youropenaiapikey\"\n",
         "\n",
         "llm = OpenAI()\n",
         "\n",
