--- a/examples/Advance-RAG-with-HyDE/main.ipynb
+++ b/examples/Advance-RAG-with-HyDE/main.ipynb
@@ -64,7 +64,7 @@
     {
       "cell_type": "code",
       "source": [
-        "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"
+        "sk-yourkeyplease"
       ],
       "metadata": {
         "id": "_WAUbiSnALxp"
